etc/sysconfig/iptables
# Generated by iptables-save v1.4.7 on Mon Jul 31 13:03:18 2017
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [28:2640]
-A INPUT -s 103.16.8.128/32 -j ACCEPT 
-A INPUT -s 114.160.35.96/32 -j ACCEPT 
-A INPUT -s 175.177.5.212 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 25 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT 
-A INPUT -s 183.77.231.92/32 -p tcp -m state --state NEW -m tcp --dport 21 -j ACCEPT 
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
-A FORWARD -j REJECT --reject-with icmp-host-prohibited 
COMMIT
# Completed on Mon Jul 31 13:03:18 2017
